# Ai-cam-master

./: .env.example  .gitignore  Dockerfile  README.md  aicam.spec  docker-compose.yml  gui.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: build-cpp-gui.yml
cpp-gui/: CMakeLists.txt  README.md  build.bat  build.sh  installer.nsi
cpp-gui/include/: ApiClient.h  CameraDialog.h  CameraGridWidget.h  EventsTableWidget.h  LiveVideoWidget.h  MainWindow.h  PythonBackend.h  SettingsDialog.h  StreamDecoder.h
cpp-gui/resources/: Info.plist  ai-cam.desktop
cpp-gui/src/: ApiClient.cpp  CameraDialog.cpp  CameraGridWidget.cpp  EventsTableWidget.cpp  LiveVideoWidget.cpp  MainWindow.cpp  PythonBackend.cpp  SettingsDialog.cpp  StreamDecoder.cpp  main.cpp
src/: __init__.py  config.py  database.py  main.py
src/alerts/: manager.py
src/api/: alerts.py  cameras.py  events.py  geeni.py  stream.py
src/camera/: auto_discovery.py  credentials.py  discovery.py  manager.py  stream.py
src/detection/: detector.py  model_manager.py  motion.py
src/integrations/: __init__.py  blink.py  eeseecam.py  geeni.py  zmodo.py  zmodo_cloud.py
src/models/: alert_rule.py  camera.py  event.py
src/schemas/: alert_rule.py  camera.py  discovery.py  event.py  vendors.py
src/static/: manifest.json  sw.js
src/static/css/: style.css
src/static/js/: app.js  cameras.js  dashboard.js  events.js  settings.js  vendor-logins.js
src/templates/: base.html  cameras.html  dashboard.html  events.html  settings.html
tests/: conftest.py  test_api.py  test_camera.py  test_detection.py  test_discovery.py
